// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Tag className="my-classname" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078 my-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag default props 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag icon="mdi-check" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
>
  <Icon />
</span>
`;

exports[`UU5.Bricks.Tag icon="uubml-symbol-state-s02" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
>
  <Icon
    className="uu-bricks-ysxfq1"
    icon="uubml-symbol-state-s02"
  />
</span>
`;

exports[`UU5.Bricks.Tag iconAfter="mdi-check" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
>
  <Icon />
</span>
`;

exports[`UU5.Bricks.Tag iconAfter="uubml-symbol-state-s02" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
>
  <Icon
    className="uu-bricks-ysxfq1"
    icon="uubml-symbol-state-s02"
  />
</span>
`;

exports[`UU5.Bricks.Tag id="myId" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="myId"
/>
`;

exports[`UU5.Bricks.Tag mainAttrs=undefined 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag name="myName" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
  name="myName"
/>
`;

exports[`UU5.Bricks.Tag nestingLevel="bigBox" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag nestingLevel="bigBoxCollection" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag nestingLevel="box" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag nestingLevel="boxCollection" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag nestingLevel="container" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag nestingLevel="inline" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag nestingLevel="page" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag nestingLevel="smallBox" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag nestingLevel="smallBoxCollection" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag nestingLevel="spa" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag noIndex=false 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag noIndex=true 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078 uu5-noindex"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag render example UU5.Bricks.Tag should render without crash 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag size="m" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag size="s" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-1w62rqp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag state="active" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-177xxlu"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag state="alternativeActive" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-f8csav"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag state="alternativeFinal" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-13peo3p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag state="cancel" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-4ymio9"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag state="final" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-b4660n"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag state="initial" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-193zs6x"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag state="passive" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-hzfilx"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag state="problemActive" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-1pk8x0c"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag state="system" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Tag style="padding:8px; borderRadius: 2px" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Tag style={"backgroundColor":"red","color":"blue"} 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Tag tooltip="My Tooltip" 1`] = `
<span
  className="uu5-bricks-state-icon uu-bricks-bab078"
  id="uuID"
  title="My Tooltip"
/>
`;
